Fix: submit button alignment on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,5 @@
 /** Fonts **/
 
-@import url("https://fonts.googleapis.com/css?family=Assistant:200&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Raleway:200&display=swap");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
@@ -267,10 +266,10 @@ html {
 }
 
 .from-watson.latest.top p:before {
-  content: ".";
+  content: " ";
   background-color: #F868A5;
   background-size: 0.3125rem 1.3125rem;
-  border-radius: 10px;
+  border-radius: 1rem;
   position: absolute;
   z-index: 2;
   left: 0.4375rem;
@@ -290,7 +289,7 @@ html {
   letter-spacing: 0.015rem;
   line-height: 1.3125rem;
   height: 2.5rem;
-  min-width: 80%;
+  min-width: 75%;
   max-width: 100%;
   padding-left: 0.125rem;
   margin-bottom: -0.125rem;
